<resources>
    <string name="app_name">PeluqueriaTEA</string>
    <string name="pantallaPrincipal_consejosButton">Consejos</string>
    <string name="pantallaPrincipal_secuenciaPasosButton">Vamos a la peluquería</string>
    <string name="pantallaPrincipal_avatarButton">Elijo mi peinado</string>
    <string name="pantallaPrincipal_juegosButton">Juego</string>
    <string name="pantallaPrincipal_ajustesButton">Ajustes</string>
    <string name="pantallaPrincipal_creditosButton">Créditos</string>

    <!-- Modulo 1 - Consejos. El nombre de las strings es clave para que luego se monte la imagen
            y cadena adecuada -->
    <string name="consejos_consejo_1">Favorecer la participación de la persona con TEA
        en el cuidado diario del pelo en el ámbito familiar</string>
    <string name="consejos_consejo_2">Facilitar que la persona con TEA conozca el espacio,
        profesionales y utensilios de la peluquería</string>
    <string name="consejos_consejo_3">Valorar el grado de molestia que pueden generar olores,
        ruidos, iluminación, etc y reducirlos lo máximo posible</string>
    <string name="consejos_consejo_4">Concertar la cita en una hora que sea más tranquila
        y evitar esperas</string>
    <string name="consejos_consejo_5">Proporcionar una banqueta que permita apoyar los pies
        si al sentarse en la silla le genera mayor inestabilidad</string>
    <string name="consejos_consejo_6">Proporcionar material distractor, si es necesario,
        mientras le cortan el pelo</string>
    <string name="consejos_consejo_7">Proporcionar los apoyos necesarios, como apoyos
        visuales, historias o calendarios que favorezcan la comprensión de la situación</string>

    <!-- Modulo 2 - Secuencia de pasos "Vamos a la peluquería" -->
    <string name="vamosPeluqueria_paso_1">¡Vamos a la peluquería!</string>
    <string name="vamosPeluqueria_paso_2">Entro y saludo al peluquero</string>
    <string name="vamosPeluqueria_paso_3">Me siento y espero mi turno</string>
    <string name="vamosPeluqueria_paso_4">Me siento en la silla y me ponen la capa</string>
    <string name="vamosPeluqueria_paso_5">Me mojan el pelo</string>
    <string name="vamosPeluqueria_paso_6">Me cortan el pelo</string>
    <string name="vamosPeluqueria_paso_7">Me peinan</string>
    <string name="vamosPeluqueria_paso_8">Me secan el pelo</string>
    <string name="vamosPeluqueria_chico_paso_9">¡Qué guapo estoy!</string>
    <string name="vamosPeluqueria_chica_paso_9">¡Qué guapa estoy!</string>

    <!-- Modulo 3 - Elijo mi peinado -->
    <string name="elijoMiPeinadoPrincipal_misCortesDePeloButton">Mis cortes de pelo</string>
    <string name="elijoMiPeinadoPrincipal_miNuevoCorteDePeloButton">Mi nuevo corte de pelo</string>
    <string name="elijoMiPeinadoNuevo_Paso1">Elijo mi peinado</string>
    <string name="elijoMiPeinado_CortoButton">Corto</string>
    <string name="elijoMiPeinado_MedioButton">Medio</string>
    <string name="elijoMiPeinado_LargoButton">Largo</string>
    <string name="elijoMiPeinadoNuevo_Paso2">Elijo mi color de pelo</string>
    <string name="elijoMiPeinado_RubioButton">Rubio</string>
    <string name="elijoMiPeinado_MarronButton">Castaño</string>
    <string name="elijoMiPeinado_NegroButton">Negro</string>
    <string name="elijoMiPeinadoNuevo_chicoResultadoTextView">¡Ya estoy listo!</string>
    <string name="elijoMiPeinadoNuevo_chicaResultadoTextView">¡Ya estoy lista!</string>

    <string name="elijoMiPeinadoMisCortesDePelo">Mis cortes de pelo</string>

    <!-- Modulo 4 - Juego de asociacion de sonidos -->
    <string name="juegoAsociacionSonidos_TextView">¿Qué objeto suena?</string>
    <string name="juegoAsociacionSonidos_comentarioTextView">Pulsa el altavoz para escuchar el sonido hasta
    dos veces</string>
    <string name="juegoAsociacionSonidos_eleccionTextView">Ahora tienes que elegir un objeto pulsando un botón</string>
    <string name="juegoAsociacionSonidos_ResultadoCorrectoTextView">¡Correcto!</string>
    <string name="juegoAsociacionSonidos_ResultadoCorrectoYFinalTextView">¡Correcto, juego finalizado!</string>
    <string name="juegoAsociacionSonidos_ResultadoIncorrectoTextView">Inténtalo otra vez</string>
    <string name="juegoAsociacionSonidos_ResultadoComentarioSiguienteObjetoTextView">
        Pulsa en cualquier parte de la pantalla para continuar
    </string>
    <string name="juegoAsociacionSonidos_ResultadoComentarioAnteriorObjetoTextView">
        Pulsa en cualquier parte de la pantalla para probar otra vez
    </string>


    <!-- Modulo 5 - Ajustes -->
    <string name="ajustes_personajesTextView">Personajes</string>
    <string name="ajustes_citasTextView">Citas</string>
    <string name="ajustes_sexoSwitch">Sexo del personaje a mostrar</string>
    <string name="ajustes_opcionChicoButton">Chico</string>
    <string name="ajustes_opcionChicaButton">Chica</string>
    <string name="ajustes_seleccion_chico_chica">Seleccione el personaje que mostrar</string>
    <string name="ajustes_borrarListaAvatares">Borrar peinados guardados</string>
    <string name="ajustes_subtituloDialogConfirmacionBorrarAvatares">
        La siguiente acción elimina los peinados guardados, pero siempre podrá diseñarlos de nuevo.
        ¿Desea borrar los peinados guardados?</string>
    <string name="ajustes_borrarCita">Eliminar cita</string>
    <string name="ajustes_subtituloDialogConfirmacionBorrarCita">
        ¿Desea eliminar la cita?</string>
    <string name="ajustes_personajesBorradosToast">Personajes borrados</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="ajustes_gestionCitasButton">Gestión de citas</string>
    <string name="ajustes_gestionCitasCitaActualTextView">Cita actual</string>
    <string name="ajustes_gestionCitasRegistroCitasTextView">Registro de citas</string>
    <string name="ajustes_gestionCitasRegistroCitasSubTextoTextView">Pulse sobre una cita para
        editar sus detalles o borrarla, o pulse sobre Introducir nueva cita para crear una nueva</string>
    <string name="ajustes_gestionCitasIntroducirNuevaCitaButton">Introducir nueva cita</string>
    <string name="ajustes_gestionCitasVolverButton">Volver</string>
    <string name="ajustes_gestionCitasNoHayCitas">No hay cita actual</string>
    <string name="ajustes_gestionCitasNoHayComentarios">No hay comentarios</string>



    <string name="ajustes_nuevaCitaFecha">Fecha</string>
    <string name="ajustes_nuevaCitaFechaButton">Pulse para introducir la fecha</string>
    <string name="ajustes_nuevaCitaHora">Hora</string>
    <string name="ajustes_nuevaCitaHoraButton">Pulse para introducir la hora</string>
    <string name="ajustes_nuevaCitaComentario">Comentario</string>
    <string name="ajustes_nuevaCitaComentarioHint">Introduzca un comentario si lo desea</string>
    <string name="ajustes_nuevaCitaBorrar">Eliminar cita</string>
    <string name="ajustes_nuevaCitaGuardar">Guardar</string>
    <string name="ajustes_descartarCambios">¿Descartar cambios?</string>
    <string name="ajustes_subtituloDialogConfirmacionDescartarCambios">
       Si vuelve atrás, los cambios realizados no se guardarán. Si quiere conservarlos, pulse Guardar</string>
    <string name="ajustes_sustituirCita">Añadir cita</string>
    <string name="ajustes_subtituloDialogConfirmacionSustituirCita">
       Si añade una cita nueva, se sustituirá la cita actual. ¿Desea proseguir?</string>

    <string name="ajustes_grabarCitaCalendarioConfirmacion">Calendario</string>
    <string name="ajustes_subtituloGrabarCitaCalendarioConfirmacion">¿Desea guardar la cita en el
        calendario asociado en el teléfono además de en la propia aplicación (se gestionarán independientemente)?</string>

    <string name="no">NO</string>
    <string name="si">SÍ</string>

    <string name="appbar_nuevaCita">Nueva cita</string>
    <string name="appbar_guardarCita">Guardar</string>




    <string name="creditos_desarrollador_principal_titulo">Desarrollador principal</string>
    <string name="creditos_desarrollador_principal">Juan Manuel Pérez Aguilar,
        <a href="mailto:juanmaper30@gmail.com">juanmaper30@gmail.com</a>,
        Graduado en Ingeniería Informática</string>
    <string name="creditos_coordinador_titulo">Dirección y coordinación</string>
    <string name="creditos_coordinador">Juan Carlos Fernández Caballero,
        <a href="mailto:jfcaballero@uco.es">jfcaballero@uco.es</a>.
        Universidad de Córdoba, grupo de investigación AYRNA (<a href="https://www.uco.es/ayrna/">https://www.uco.es/ayrna/</a>)
    </string>
    
    <string name="creditos_equipoInvestigador_titulo">Equipo investigador</string>
    <string name="creditos_equipoInvestigador">Pedro Antonio Gutiérrez Peña,
        <a href="mailto:pagutierrez@uco.es">pagutierrez@uco.es</a>.
        Universidad de Córdoba, grupo de investigación AYRNA (<a href="https://www.uco.es/ayrna/">https://www.uco.es/ayrna/</a>)
    \n\n César Hervás Martínez, <a href="mailto:chervas@uco.es">chervas@uco.es</a>.
        Universidad de Córdoba, grupo de investigación AYRNA
        (<a href="https://www.uco.es/ayrna/">https://www.uco.es/ayrna/</a>)
</string>

    <string name="creditos_apoyo_titulo">Apoyo</string>
    <string name="creditos_apoyo">María Muñoz Reyes, <a href="mailto:direccion@autismocordoba.org">direccion@autismocordoba.org</a>.
        Asociación Autismo Córdoba,
        (<a href="https://www.autismocordoba.org/">https://www.autismocordoba.org/</a>)
    \n\n Alicia Heras Ruiz, <a href="mailto:direccion@autismocordoba.org">direccion@autismocordoba.org</a>.
        Terapeuta ocupacional en Autismo Córdoba
        (<a href="https://www.autismocordoba.org/">https://www.autismocordoba.org/</a>)</string>

    <string name="creditos_financiacion_titulo">Financiación</string>
    <string name="creditos_financiacion">VI Plan Propio GALILEO de Innovación y Transferencia de la
        Universidad de Córdoba. Modalidad IV, proyectos UCO-SOCIAL-INNOVA</string>

    <string name="contentDescriptionLogoUco">Logo de la Universidad de Córdoba</string>
    <string name="contentDescriptionLogoPlanGalileo">Logo del sexto Plan Propio GALILEO</string>

    <string name="creditos_recursos_titulo">Iconos, imágenes y pictogramas</string>
    <string name="creditos_recursos">Flaticon,
        (<a href="https://www.flaticon.es/">https://www.flaticon.es/</a>)
Freepik Company, S.L Licencia premium</string>

    <string name="atrasButton">Atrás</string>
    <string name="siguienteButton">Siguiente</string>
    <string name="chicoPeinandoseImageView">Niño peinándose</string>
</resources>
