<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/creditos_desarrollador_tituloTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"

            android:text="@string/creditos_desarrollador_principal_titulo"
            android:textColor="@color/colorPrimary"

            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/creditos_desarrolladorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/creditos_desarrollador_principal"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/creditos_desarrollador_tituloTextView" />

        <TextView
            android:id="@+id/creditos_coordinadores_tituloTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/creditos_coordinador_titulo"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/creditos_desarrolladorTextView" />

        <TextView
            android:id="@+id/creditos_coordinadoresTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/creditos_coordinador"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/creditos_coordinadores_tituloTextView" />

        <TextView
            android:id="@+id/creditos_equipoInvestigador_tituloTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/creditos_equipoInvestigador_titulo"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/creditos_coordinadoresTextView" />

        <TextView
            android:id="@+id/creditos_equipoInvestigadorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/creditos_equipoInvestigador"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/creditos_equipoInvestigador_tituloTextView" />

        <TextView
            android:id="@+id/creditos_apoyo_tituloTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/creditos_apoyo_titulo"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/creditos_equipoInvestigadorTextView" />

        <TextView
            android:id="@+id/creditos_apoyoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/creditos_apoyo"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/creditos_apoyo_tituloTextView" />

        <TextView
            android:id="@+id/creditos_financiacion_tituloTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/creditos_financiacion_titulo"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/creditos_apoyoTextView" />

        <TextView
            android:id="@+id/creditos_financiacionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/creditos_financiacion"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/creditos_financiacion_tituloTextView" />


        <ImageView
            android:id="@+id/ucoLogoImageView"
            android:layout_width="150dp"
            android:layout_height="170dp"
            android:contentDescription="@string/contentDescriptionLogoUco"
            app:layout_constraintBottom_toTopOf="@+id/creditos_recursos_tituloTextView"
            app:layout_constraintEnd_toStartOf="@+id/planGalileoLogoImageView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/creditos_financiacionTextView"
            app:srcCompat="@drawable/ic_logo_uco_1" />

        <ImageView
            android:id="@+id/planGalileoLogoImageView"
            android:layout_width="200dp"
            android:layout_height="230dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/contentDescriptionLogoPlanGalileo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ucoLogoImageView"
            app:layout_constraintTop_toBottomOf="@+id/creditos_financiacionTextView"
            app:srcCompat="@drawable/ic_logo_plan_galileo" />

        <TextView
            android:id="@+id/creditos_recursos_tituloTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/creditos_recursos_titulo"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/planGalileoLogoImageView" />

        <TextView
            android:id="@+id/creditos_recursosTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/creditos_recursos"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/creditos_recursos_tituloTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>