<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/ajustes_citaTituloEleccionFechaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"

        android:text="@string/ajustes_nuevaCitaFecha"
        android:textColor="@color/colorPrimary"

        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ajustes_citaFechaElegidaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="25/07/2020"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ajustes_citaTituloEleccionFechaTextView" />

    <Button
        android:id="@+id/ajustes_citaEleccionFechaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_ajustes_gestion_citas"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/ajustes_nuevaCitaFechaButton"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ajustes_citaFechaElegidaTextView" />


    <TextView
        android:id="@+id/ajustes_citaTituloEleccionHoraTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="32dp"
        android:text="@string/ajustes_nuevaCitaHora"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

    <TextView
        android:id="@+id/ajustes_citaHoraElegidaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="16:27"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ajustes_citaTituloEleccionHoraTextView" />

    <Button
        android:id="@+id/ajustes_citaEleccionHoraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_ajustes_gestion_citas"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/ajustes_nuevaCitaHoraButton"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ajustes_citaHoraElegidaTextView" />


    <TextView
        android:id="@+id/ajustes_citaTituloComentarioTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="32dp"
        android:text="@string/ajustes_nuevaCitaComentario"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider5" />

    <EditText
        android:id="@+id/ajustes_citaComentarioEditText"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/ajustes_nuevaCitaComentarioHint"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ajustes_citaTituloComentarioTextView" />


    <Button
        android:id="@+id/ajustes_citaVolverButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_ajustes_gestion_citas"
        android:fontFamily="sans-serif"
        android:padding="10dp"

        android:text="@string/ajustes_gestionCitasVolverButton"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/ajustes_citaBorrarButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ajustes_citaComentarioEditText" />

    <Button
        android:id="@+id/ajustes_citaBorrarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_ajustes_gestion_citas"
        android:fontFamily="sans-serif"
        android:padding="10dp"

        android:text="@string/ajustes_nuevaCitaBorrar"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/ajustes_citaGuardarButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ajustes_citaVolverButton"
        app:layout_constraintTop_toBottomOf="@+id/ajustes_citaComentarioEditText" />

    <Button
        android:id="@+id/ajustes_citaGuardarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_ajustes_gestion_citas"
        android:fontFamily="sans-serif"
        android:padding="10dp"
        android:text="@string/ajustes_nuevaCitaGuardar"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ajustes_citaBorrarButton"
        app:layout_constraintTop_toBottomOf="@+id/ajustes_citaComentarioEditText" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ajustes_citaEleccionFechaButton" />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ajustes_citaEleccionHoraButton" />


</androidx.constraintlayout.widget.ConstraintLayout>