<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/amarillo_menos_claro"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/consejos_consejoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/primary_text_light_nodisable"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/consejos_consejo_2" />

    <ImageButton
        android:id="@+id/consejos_siguienteButton"
        style="@style/ConsejosAtrasSiguienteButton"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/siguienteButton"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        android:background="@drawable/imagebutton_flecha_siguiente" />

    <ImageButton
        android:id="@+id/consejos_atrasButton"
        style="@style/ConsejosAtrasSiguienteButton"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/atrasButton"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        android:background="@drawable/imagebutton_flecha_atras"/>


    <ImageView
        android:id="@+id/consejos_pictogramaImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/chicoPeinandoseImageView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/consejos_consejoTextView"
        tools:src="@drawable/ic_consejo_2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />



</androidx.constraintlayout.widget.ConstraintLayout>