<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/amarillo_menos_claro"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/elijoMiPeinado_MiNuevoCorteDePeloResultadoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/elijoMiPeinadoNuevo_chicoResultadoTextView"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/primary_text_light_nodisable"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/elijoMiPeinado_siguienteButton"
        style="@style/ConsejosAtrasSiguienteButton"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:background="@drawable/imagebutton_flecha_siguiente"
        android:contentDescription="@string/siguienteButton"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/elijoMiPeinado_atrasButton"
        style="@style/ConsejosAtrasSiguienteButton"
        android:layout_marginStart="16dp"
        android:adjustViewBounds="true"
        android:background="@drawable/imagebutton_flecha_atras"
        android:contentDescription="@string/atrasButton"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/elijoMiPeinado_MiNuevoCorteDePeloResultadoImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:contentDescription="Avatar chico o chica con peinado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_personaje_peinado_chico_medio_marron" />




</androidx.constraintlayout.widget.ConstraintLayout>